...
                android:layout_height="62dp"
                android:background="@drawable/rounded_image_border"/>

        </FrameLayout>

        <TextView
            android:id="@+id/chkd_usr_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Sample Text"
            android:textSize="16sp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="top"/>

        <TextView
            android:id="@+id/chkd_usr_count"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/rounded_image_border"
            android:text="1"
            android:gravity="center"
            android:textStyle="bold"
...
