...
        android:background="@drawable/round_button"
        android:src="@drawable/announcements_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/nav_o_events_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:src="@drawable/events_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nav_o_add_event_btn"
...
        android:id="@+id/nav_o_add_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:src="@drawable/add_symbol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nav_o_profile_btn"
        app:layout_constraintStart_toEndOf="@+id/nav_o_events_btn" />

    <ImageButton
        android:id="@+id/nav_o_profile_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
