...
    android:layout_width="match_parent"
    android:paddingLeft="40dp"
    android:paddingTop="50dp"
    android:paddingRight="40dp"
    android:paddingBottom="50dp"
    android:layout_height="match_parent"
    android:id="@+id/event_dashboard_page"
    tools:context=".EventDashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
...
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:orientation="horizontal"
                android:padding="3dp">

                    <ImageView
                        android:id="@+id/evdash_img_stat4"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        app:srcCompat="@drawable/people_symbol"
                        android:background="@drawable/rect_rounded_button"
                        android:backgroundTint="@color/qr_active"/>
...
